leaderboard fix on mobile view

--- a/src/pages/Leaderboards/styles.module.scss
+++ b/src/pages/Leaderboards/styles.module.scss
@@ -40,10 +40,7 @@
   
   @media screen and (max-width: 480px) {
     .leaderboardtable {
-      animation-name: leaderboard;
-      animation-duration: 2s;
-     overflow: auto;
-     overflow-x: auto;
+      width: 85%!important;
     }
   }
   
